--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lalrpop-util ={ version = "0.19.7", features = ["lexer"] }
+
+[build-dependencies]
+lalrpop = "0.19.7"
