--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 lalrpop-util ={ version = "0.20.0", features = ["lexer"] }
+koopa = { version =  "0.0.7" }
 
 [build-dependencies]
 lalrpop = "0.20.0"
